# capengine

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  CapEngine.h  CapEngineException.h  EventDispatcher.cpp  EventDispatcher.h  IEventSubscriber.cpp  IEventSubscriber.h  Makefile  Makefile.defs  Point2d.cpp  Point2d.h  Readme.md  Time.cpp  Time.h  Vector2d.cpp  Vector2d.h  VideoManager.cpp  VideoManager.h  absolutelayout.cpp  absolutelayout.h  aggregatecommand.cpp  aggregatecommand.h  animation.h  animator.cpp  animator.h  animatorv2.cpp  asset_manager.cpp  asset_manager.h  basicbutton.cpp  basicbutton.h  bitmapcollisionlayer.cpp  bitmapcollisionlayer.h  boxcollider.cpp  boxcollider.h  button.h  (+197 more)
jenkins/: Dockerfile  Jenkinsfile
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/breakout/: CMakeLists.txt  ballgraphicscomponent.cpp  ballgraphicscomponent.h  ballphysicscomponent.cpp  ballphysicscomponent.h  blockgraphicscomponent.cpp  blockgraphicscomponent.h  constants.h  main.cpp  maingamestate.cpp  maingamestate.h  playergraphicscomponent.cpp  playergraphicscomponent.h  playerphysicscomponent.cpp  playerphysicscomponent.h
src/apps/flappypei/: CMakeLists.txt  catgraphicscomponent.cpp  catgraphicscomponent.h  catphysicscomponent.cpp  catphysicscomponent.h  constants.h  gameevents.h  main.cpp  maingamestate.cpp  maingamestate.h  playergraphicscomponent.cpp  playergraphicscomponent.h  playerphysicscomponent.cpp  playerphysicscomponent.h
src/apps/rockpaperscissors/: CMakeLists.txt  main.cpp  rockpaperscissorsstate.cpp  rockpaperscissorsstate.h
src/apps/rockpaperscissors/resources/: backgroundtiles.aseprite  backgroundtiles.tsj  keys.tsj  map.tmj  rps.tsj
src/apps/tiledviewer/: CMakeLists.txt  main.cpp  teststate.cpp  teststate.h  tiledtest.cpp  tiledviewer.cpp  tiledviewer.h
src/capengine/: CMakeLists.txt  CapEngineException.h  Point2d.h  Vector2d.cpp  Vector2d.h  VideoManager.cpp  VideoManager.h  absolutelayout.cpp  animator.cpp  animatorv2.cpp  animatorv2.h  asset_manager.cpp  asset_manager.h  basicbutton.cpp  bitmapcollisionlayer.cpp  boxcollider.h  button.h  button_group.cpp  button_group.h  camera2d.cpp  camera2d.h  captypes.cpp  captypes.h  circle.cpp  circle.h  collision.cpp  collision.h  colour.cpp  colour.h  components.cpp  components.h  componentutils.cpp  control.h  controller.cpp  controller.h  defer.h  editor.cpp  eventsubscriber.cpp  eventutils.cpp  filesystem.cpp  (+106 more)
src/capengine/gtests/: CMakeLists.txt  camera2d_test.h  collision_test.h  main.cpp  test_colour.h  test_tiledmap.h  test_tiledobjectgroup.h  test_tiledtilelayer.h  test_tiledtileset.h  testenvironment.cpp  testenvironment.h  testutils.cpp  testutils.h
src/capengine/supportfiles/res/: uiconfig.json
src/capengine/test/: .dir-locals.el  CMakeLists.txt  Makefile  camera2dtest.h  matrixtest.h  quaterniontest.h  rectangletest.h  scanconvert_test.h  scene2dutils_tests.h  test.cpp  vectortest.h  xml_parser_test.h
src/capengine/test/testdata/: map.tmj
src/capengine/test_files/: map1.cem.bak  tileset.json  tileset.tst
src/capengine/test_files/tiled/: testmap.json  tileset.tsj
test/: .dir-locals.el  CMakeLists.txt  Makefile  camera2dtest.h  capcommontest.h  collisionstest.h  eventsubscribertest.h  matrixtest.h  quaterniontest.h  rectangletest.h  scanconvert_test.h  scene2dutils_tests.h  test  test.cpp  test.xml  vectortest.h  xml_parser_test.h
test_files/: map1.cem  map1.json
